# otus_cpp_10_map_reduce

./: CMakeLists.txt  README.md  annotated.html  classes.html  classt__map__reduce-members.html  classt__map__reduce.html  classt__sync__console.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6ebd230777d572352f722e98489dc90d.html  dir_6ebd230777d572352f722e98489dc90d_dep.map  dir_6ebd230777d572352f722e98489dc90d_dep.md5  dir_a5b365d78b5b1a5b39cf84ab3a208afe.html  dir_a5b365d78b5b1a5b39cf84ab3a208afe_dep.map  dir_a5b365d78b5b1a5b39cf84ab3a208afe_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  global__place_8cpp.html  global__place_8cpp_8o_8d.html  global__place_8cpp__incl.map  global__place_8cpp__incl.md5  globals.html  globals_func.html  globals_type.html  globals_vars.html  main_8cpp.html  main_8cpp_8o_8d.html  main_8cpp__incl.map  main_8cpp__incl.md5  map__reduce_8cpp.html  map__reduce_8cpp_8o_8d.html  map__reduce_8cpp__incl.map  map__reduce_8cpp__incl.md5  map__reduce_8h.html  map__reduce_8h__dep__incl.map  map__reduce_8h__dep__incl.md5  map__reduce_8h__incl.map  map__reduce_8h__incl.md5  (+19 more)
search/: all_2.js  all_3.js  all_4.js  all_5.js  all_9.js  all_a.js  all_d.js  all_e.js  classes_0.js  files_2.js  files_4.js  functions_0.js  functions_3.js  functions_4.js  searchdata.js  typedefs_0.js  variables_3.js
src/: main.cpp  map_reduce.cpp  map_reduce.h  sync_console.cpp
test_data/: emails.txt  links.txt  short_test_list.txt  short_test_list_1.txt  test1.txt
(+1 files in other folders)
